--- a/styles/pages/Home.scss
+++ b/styles/pages/Home.scss
@@ -1,8 +1,75 @@
-.container-image{
-    width: 100%;
-    height: 900px;
-    background: url('https://uploads.jovemnerd.com.br/wp-content/uploads/2021/09/duna-capa.jpg' ) no-repeat center center/cover ;
-    background-color: rgba(0,0,0,0.6);
-    background-blend-mode: color;
+.home_contente{
+
+    .container-image{
+        width: 100%;
+        height: 900px;
+        background: url('https://uploads.jovemnerd.com.br/wp-content/uploads/2021/09/duna-capa.jpg' ) no-repeat center center/cover ;
+        background-color: rgba(0,0,0,0.6);
+        background-blend-mode: color;
+    
+    }
+
+    .wrapper{
+        position: relative;
+        bottom: 220px;
+
+        display: flex;
+        align-items: center;
+
+        &:hover .left_button,
+        &:hover .right_button {
+            opacity: 1;
+        }
+
+        button{
+            position: absolute;
+            cursor: pointer;
+            width: 30px;
+            height: 150px;
+            font-size: 1.8rem;
+            color: #fff;
+            background-color:rgba(0, 0, 0, 0.5);
+            z-index: 10;
+            opacity: 0;
+
+        }
+
+        .left_button{
+            left: 0;
+        }
+
+        .right_button{
+            right: 0;
+        }
+
+        .slide{
+            width: auto;
+            height: 300px;
+            padding: 0px 30px;
+    
+            display: flex;
+            align-items: center;
+            overflow-x: hidden;
+
+            transition: all ease 0.5s;
+
+            .card{
+                margin: 0px 3px;
+                transition: all ease 0.5s;
+    
+                img{
+                    height: 120px;
+                    width: 212px;
+                }
+                &:hover{
+                    transform: scale(1.8);
+                }
+            }
+        }
+
+    }
+
+    
 
 }
+
