--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -7,8 +7,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.1);
 
-    padding: 6px 30px;
+    padding: 6px 60px;
     transition: all ease 0.6s;
 
     &.active{
