--- a/styles/pages/Home.scss
+++ b/styles/pages/Home.scss
@@ -11,7 +11,7 @@
 
     .wrapper{
         position: relative;
-        bottom: 200px;
+        bottom: 250px;
 
         display: flex;
         align-items: center;
@@ -44,26 +44,85 @@
 
         .slide{
             width: auto;
-            height: 230px;
-            padding: 0px 30px;
+            height: 350px;
+            padding: 0px 50px;
     
             display: flex;
             align-items: center;
             overflow-x: hidden;
 
             transition: all ease 0.5s;
+            
 
             .card{
                 margin: 0px 3px;
-                transition: all ease 0.5s;
+                transition: all ease-in 0.3s;
+                display: flex;
+                flex-direction: column;
     
                 img{
                     height: 120px;
                     width: 212px;
                 }
-                &:hover{
-                    transform: scale(1.8);
+                .info{
+                    width: 212px;
+                    height: 130px;
+                    padding: 8px;
+                    background-color: #333;
+                    display: none;
+
+                    .controllers{
+                            display: flex;
+                            /* justify-content: center; */
+                            align-items: center;
+                        span{
+                            font-size: 20px;
+                            padding: 5px;
+                            margin-left: 3px;
+                            cursor: pointer;
+                            border: 1px solid #fff;
+                            border-radius: 50%;
+
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            
+
+                            &:nth-child(1){
+                                background-color: #fff;
+                                color: #222;
+                            }
+
+                        }
+                        
+                    }
+
+                    .recomend{
+                        margin: 10px 0px;
+
+                        span{
+                            font-size: 0.8rem;
+                            color: green;
+                            margin-left: 5px;
+
+                            &:nth-child(2){
+                                background-color: green;
+                                padding: 5px 8px;
+                                color: #222;
+                            }
+                        }
+                    }
                 }
+
+                &:hover{
+                    transform: scale(1.4);
+                    
+                }
+                
+                &:hover .info{
+                    display: block;
+                }
+    
             }
         }
 
