--- a/styles/pages/Home.scss
+++ b/styles/pages/Home.scss
@@ -1,134 +1,57 @@
 .home_contente{
-
+  
     .container-image{
         width: 100%;
-        height: 900px;
+        height: 1100px;
         background: url('https://uploads.jovemnerd.com.br/wp-content/uploads/2021/09/duna-capa.jpg' ) no-repeat center center/cover ;
         background-color: rgba(0,0,0,0.6);
         background-blend-mode: color;
-    
-    }
-
-    .wrapper{
-        position: relative;
-        bottom: 250px;
 
         display: flex;
         align-items: center;
+        justify-content: left;
 
-        &:hover .left_button,
-        &:hover .right_button {
-            opacity: 1;
-        }
+        padding: 40px;
+
+      
 
         button{
-            position: absolute;
-            cursor: pointer;
-            width: 30px;
-            height: 150px;
-            font-size: 1.8rem;
-            color: #fff;
-            background-color:rgba(0, 0, 0, 0.5);
-            z-index: 10;
-            opacity: 0;
-
-        }
-
-        .left_button{
-            left: 0;
-        }
-
-        .right_button{
-            right: 0;
-        }
-
-        .slide{
-            width: auto;
-            height: 350px;
-            padding: 0px 50px;
-    
+            height: 45px;
+            padding: 5px 10px;
+            font-size: 1.2rem;
+            margin-left: 20px;
             display: flex;
             align-items: center;
-            overflow-x: hidden;
+            justify-content: center;
+            cursor: pointer;
+            border-radius: 5px;
+        }
 
-            transition: all ease 0.5s;
+        .watch-button{
+            width: 135px;
+            background-color: #ffff;
             
-
-            .card{
-                margin: 0px 3px;
-                transition: all ease-in 0.3s;
-                display: flex;
-                flex-direction: column;
-    
-                img{
-                    height: 120px;
-                    width: 212px;
-                }
-                .info{
-                    width: 212px;
-                    height: 130px;
-                    padding: 8px;
-                    background-color: #333;
-                    display: none;
-
-                    .controllers{
-                            display: flex;
-                            /* justify-content: center; */
-                            align-items: center;
-                        span{
-                            font-size: 20px;
-                            padding: 5px;
-                            margin-left: 3px;
-                            cursor: pointer;
-                            border: 1px solid #fff;
-                            border-radius: 50%;
-
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            
-
-                            &:nth-child(1){
-                                background-color: #fff;
-                                color: #222;
-                            }
-
-                        }
-                        
-                    }
-
-                    .recomend{
-                        margin: 10px 0px;
-
-                        span{
-                            font-size: 0.8rem;
-                            color: green;
-                            margin-left: 5px;
-
-                            &:nth-child(2){
-                                background-color: green;
-                                padding: 5px 8px;
-                                color: #222;
-                            }
-                        }
-                    }
-                }
-
-                &:hover{
-                    transform: scale(1.4);
-                    
-                }
-                
-                &:hover .info{
-                    display: block;
-                }
-    
+            span{
+                margin-right: 5px;
+                font-size: 25px;
             }
         }
 
+        .info-button{
+            width: 220px;
+            background-color: rgba(0, 0, 0, 0.6);
+            color: #fff;
+
+            span{
+                font-size: 25px;
+                margin-right: 2px;
+                margin-top: 3px;
+            }
+            
+        }
+    
     }
 
-    
 
 }
 
