--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -1,5 +1,6 @@
 .header{
     position: fixed;
+    z-index: 10;
     width: 100%;
     height: 70px;
 
@@ -16,33 +17,86 @@
         background-color: #111;
     }
 
-    nav{
+    .nav_menu{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        
+        span{
+            margin-left: 60px;
+            display: none;
+            cursor: pointer;
+            white-space: nowrap;
 
-        div{
-            margin-right: 40px;
+            @media (max-width: 850px) {
+                display: block;
+                
+            }
+
         }
 
-        a{
-            color: #fff;
-            font-size: 1rem;
-            margin-left: 15px;
-        }
+        .menu{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-left: 50px;
+            
+            div{
+                margin-right: 40px;
+            }
+    
+            a{
+                padding: 12px 8px;
+                color: #fff;
+                font-size: 1rem;
+                margin-left: 15px;
+            }
+    
+            @media (max-width: 850px) {
+                display: none;
+                flex-direction: column;
+                width: 300px;
+                background-color: rgba(0, 0, 0, 0.7);
+               
+                position: absolute;
+                top: 100px;
+                //left: calc(100% - 200px);
+                left: 0px;
+                padding: 20px 0px;
 
+                a{
+                    display: block;
+                    text-align: center;
+                    width: 100%; 
+                    margin: 10px 0px;
+
+                    &:hover{
+                        background-color: rgba(0, 0, 0, 0.5);
+                    }
+                }
+                
+                &.active{
+                    display: flex;
+                }
+            }
+    
+        }
     }
+
+    
 
     .nav_user{
         ul{
             display: flex;
             justify-content: space-between;
-            align-items: baseline;
+            align-items: center;
 
             li{
                 font-size: 1.2rem;
-                margin-left: 15px;;
+                margin-left: 18px;
+                
             }
         }
     }
 }
+
