--- a/src/Components/RowMovies/styles.scss
+++ b/src/Components/RowMovies/styles.scss
@@ -1,17 +1,14 @@
-.wrapper{
+ .wrapper{
     position: relative;
-    bottom: 400px;
+    bottom: 200px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     overflow-x: hidden;
+    padding: 0px 50px;
+    z-index: 0;
 
-
-    h1{
-        margin-left: 50px;
-    }
     
-
     &:hover .left_button,
     &:hover .right_button {
         opacity: 1;
@@ -21,31 +18,29 @@
         width: 212px;
     }
 
-    button{
+    .left_button,
+    .right_button{
         position: absolute;
         cursor: pointer;
         width: 30px;
-        height: 118px;
+        height: 140px;
         font-size: 1.8rem;
         color: #fff;
         background-color:rgba(0, 0, 0, 0.5);
         z-index: 10;
         opacity: 0;
 
+        &:nth-child(1){
+            left: 0;
+        }
+        &:nth-child(2){
+           right: 0;
+       }
     }
-
-    .left_button{
-        left: 0;
-    }
-
-    .right_button{
-        right: 0;
-    }
-
+  
     .slide{
         width: auto;
-        height: 160px;
-        padding: 0px 50px;
+        height: 140px;
 
         display: flex;
         align-items: center;
@@ -74,7 +69,7 @@
 
                 .controllers{
                         display: flex;
-                        justify-content: center;
+                        justify-content: flex-start;
                         align-items: center;
                     span{
                         font-size: 20px;
@@ -116,8 +111,8 @@
             }
            
             &:hover{
-                transform: scale(1.5);
-              
+                transform: scale(1.4);
+                
             }
             
             &:hover .info{
@@ -127,8 +122,8 @@
         }
     }
 
-}
-
+} 
+ 
 /* .slide:focus-within .card,
 .slide:hover .card {
   transform: translateX(-25%);
@@ -144,4 +139,78 @@
   transform: scale(1.5);
   z-index: 1;
 }
- */
+ 
+
+
+/*  .wrapper{
+    position: relative;
+    bottom: 400px;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+     
+
+     h1{
+         font-size: 2rem;
+     }
+
+     .teste{
+         position: relative;
+         height: 100%;
+    
+         .left_button,
+         .right_button{
+             height: 120px;
+             color: #fff;
+             position: absolute;
+             font-size: 30px;
+             background-color: red;
+             opacity: 1;
+             z-index: 2;
+
+             &:nth-child(1){
+                 left: 0;
+             }
+             &:nth-child(2){
+                right: 0;
+            }
+         }
+
+         .slide{
+             display: flex;
+             align-items: center;
+             overflow: hidden;
+             transition: all 0.5s;
+            
+            .card{
+                width: 220px; 
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                &:hover{
+                    transform: scale(1.5);
+                }
+
+                .image{
+                    width: 220px;
+                    height: 120px;
+                }
+
+                .info{
+                    display: none;
+                   
+                }
+
+                &:hover .info{
+                    display: block;
+                    height: 150px; 
+                    width: 100%;
+                    background-color: green;
+                }
+
+               
+
+            }
+         }
+     }
+ } */
