--- a/styles/pages/Home.scss
+++ b/styles/pages/Home.scss
@@ -1,19 +1,27 @@
 .home_contente{
+
+    .title{
+        color: #fff;
+        font-size: 5rem;
+        margin: 20px;
+    }
   
     .container-image{
         width: 100%;
-        height: 1100px;
+        height: 900px;
         background: url('https://uploads.jovemnerd.com.br/wp-content/uploads/2021/09/duna-capa.jpg' ) no-repeat center center/cover ;
         background-color: rgba(0,0,0,0.6);
         background-blend-mode: color;
 
         display: flex;
-        align-items: center;
-        justify-content: left;
+        flex-direction: column;
+        align-items: left;
+        justify-content: center;
 
         padding: 40px;
 
-      
+      div{
+        display: flex;
 
         button{
             height: 45px;
@@ -51,6 +59,10 @@
         }
     
     }
+
+      }
+
+      
 
 
 }
