--- a/src/Components/RowMovies/styles.scss
+++ b/src/Components/RowMovies/styles.scss
@@ -1,4 +1,4 @@
- .wrapper{
+/*  .wrapper{
     position: relative;
     bottom: 200px;
     display: flex;
@@ -45,7 +45,6 @@
         display: flex;
         align-items: center;
         overflow-x: hidden;
-
         transition: all ease 0.5s;
         
        
@@ -123,7 +122,7 @@
     }
 
 } 
- 
+  */
 /* .slide:focus-within .card,
 .slide:hover .card {
   transform: translateX(-25%);
@@ -138,79 +137,136 @@
 .slide .card:hover {
   transform: scale(1.5);
   z-index: 1;
-}
+}*/
  
 
 
-/*  .wrapper{
+.wrapper{
     position: relative;
-    bottom: 400px;
+    bottom: 220px;
     display: flex;
     flex-direction: column;
-    padding: 50px;
-     
-
-     h1{
-         font-size: 2rem;
-     }
-
-     .teste{
-         position: relative;
-         height: 100%;
+    padding: 0px 50px;
     
-         .left_button,
-         .right_button{
-             height: 120px;
-             color: #fff;
-             position: absolute;
-             font-size: 30px;
-             background-color: red;
-             opacity: 1;
-             z-index: 2;
 
-             &:nth-child(1){
-                 left: 0;
-             }
-             &:nth-child(2){
-                right: 0;
+    h1{
+        font-size: 2rem;
+    }
+
+    .teste{
+        position: relative;
+        height: 100%;
+
+        &:hover .left_button,
+        &:hover .right_button {
+            opacity: 1;
+        }
+    
+        .image{
+            width: 212px;
+        }
+
+        .left_button,
+        .right_button{
+            position: absolute;
+            cursor: pointer;
+            width: 30px;
+            height: 175px;
+            font-size: 1.8rem;
+            color: #fff;
+            //background-color:rgba(0, 0, 0, 0.5);
+            z-index: 10;
+            opacity: 0;
+    
+            &:nth-child(1){
+                left: 0;
             }
-         }
+            &:nth-child(2){
+            right: 0;
+            }
+        }
+    
+        .slide{
+            width: auto;
+            height: 170px;
 
-         .slide{
-             display: flex;
-             align-items: center;
-             overflow: hidden;
-             transition: all 0.5s;
+            display: flex;
+            align-items: center;
+            overflow: hidden;
+            transition: all ease 0.5s;
+        
+        .card{
+            margin: 0px 3px;
+            transition: all ease-in 0.3s;
+            display: flex;
+            flex-direction: column;
+
+
+            img{
+                height: 118px;
+                width: 210px;
+            }
+            .info{
+                width: 212px;
+                height: 130px;
+                padding: 8px;
+                background-color: #333;
+                display: none;
+
+                .controllers{
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    
+                    span{
+                        font-size: 20px;
+                        padding: 5px;
+                        margin-left: 3px;
+                        cursor: pointer;
+                        border: 1px solid #fff;
+                        border-radius: 50%;
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        
+
+                        &:nth-child(1){
+                            background-color: #fff;
+                            color: #222;
+                        }
+
+                    }
+                    
+                }
+
+                .recomend{
+                    margin: 10px 0px;
+
+                    span{
+                        font-size: 0.8rem;
+                        color: green;
+                        margin-left: 5px;
+
+                        &:nth-child(2){
+                            background-color: green;
+                            padding: 5px 8px;
+                            color: #222;
+                        }
+                    }
+                }
+            }
             
-            .card{
-                width: 220px; 
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                &:hover{
-                    transform: scale(1.5);
+            &:hover{
+                transform: scale(1.4);
+                
+            }
+            
+            &:hover .info{
+                display: block;
                 }
-
-                .image{
-                    width: 220px;
-                    height: 120px;
-                }
-
-                .info{
-                    display: none;
-                   
-                }
-
-                &:hover .info{
-                    display: block;
-                    height: 150px; 
-                    width: 100%;
-                    background-color: green;
-                }
-
-               
 
             }
-         }
-     }
- } */
+        }
+    }
+} 
