--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -17,6 +17,11 @@
         background-color: #111;
     }
 
+    @media (max-width: 500px){
+        padding: 6px 20px;
+         
+    }
+
     .nav_menu{
         display: flex;
         justify-content: space-between;
@@ -55,14 +60,14 @@
             @media (max-width: 850px) {
                 display: none;
                 flex-direction: column;
-                width: 300px;
+                width: 350px;
                 background-color: rgba(0, 0, 0, 0.7);
                
                 position: absolute;
                 top: 100px;
                 //left: calc(100% - 200px);
                 left: 0px;
-                padding: 20px 0px;
+                //padding: 20px 0px;
 
                 a{
                     display: block;
@@ -78,6 +83,11 @@
                 &.active{
                     display: flex;
                 }
+            }
+
+            @media (max-width: 420px){
+                width: 280px;
+                
             }
     
         }
@@ -95,6 +105,16 @@
                 font-size: 1.2rem;
                 margin-left: 18px;
                 
+                @media (max-width: 850px){
+                    &:nth-child(2){
+                        display: none;
+                    }
+                }
+                @media (max-width: 400px){
+                    &:nth-child(1){
+                        display: none;
+                    }
+                }
             }
         }
     }
