--- a/src/Components/RowMovies/styles.scss
+++ b/src/Components/RowMovies/styles.scss
@@ -1,4 +1,4 @@
-/*  .wrapper{
+/*   .wrapper{
     position: relative;
     bottom: 200px;
     display: flex;
@@ -122,8 +122,10 @@
     }
 
 } 
-  */
-/* .slide:focus-within .card,
+   */
+
+
+  /* .slide:focus-within .card,
 .slide:hover .card {
   transform: translateX(-25%);
 }
@@ -141,21 +143,31 @@
  
 
 
-.wrapper{
+ .wrapper{
     position: relative;
     bottom: 220px;
     display: flex;
     flex-direction: column;
-    padding: 0px 50px;
+    padding: 0px 0px 0px 50px;
     
+    @media (max-width: 500px){
+        padding: 0px 0px 0px 20px;
+         
+     }
 
     h1{
         font-size: 2rem;
+        
+        @media (max-width: 850px){
+            font-size: 1.5rem;
+             
+         }
     }
 
     .teste{
         position: relative;
         height: 100%;
+        
 
         &:hover .left_button,
         &:hover .right_button {
@@ -184,6 +196,10 @@
             &:nth-child(2){
             right: 0;
             }
+
+            @media (max-width: 500px){
+                opacity: 1;        
+            }
         }
     
         .slide{
@@ -196,18 +212,21 @@
             transition: all ease 0.5s;
         
         .card{
+           
             margin: 0px 3px;
             transition: all ease-in 0.3s;
             display: flex;
             flex-direction: column;
-
+           
 
             img{
+               
                 height: 118px;
+                height: 100%;
                 width: 210px;
             }
             .info{
-                width: 212px;
+                width: 210px;
                 height: 130px;
                 padding: 8px;
                 background-color: #333;
@@ -258,7 +277,9 @@
             }
             
             &:hover{
-                transform: scale(1.4);
+                //transform: scale3d(1.5, 1.0, 1.3);
+                //transform: perspective(300px) translate3d(10px, -50px, 120px);  
+                transform: scale(1.3)
                 
             }
             
@@ -269,4 +290,4 @@
             }
         }
     }
-} 
+}  
