--- a/src/Components/RowMovies/styles.scss
+++ b/src/Components/RowMovies/styles.scss
@@ -192,7 +192,7 @@
 
             .card {
                 margin: 0px 3px;
-
+            
                 div {
                     transition: ease 0.8s;
                     background-color: #333;
@@ -201,6 +201,7 @@
                         height: 118px;
                         height: 100%;
                         width: 210px;
+                        cursor: pointer;
                     }
 
                     .info {
